--- a/app/scss/components/carousel.scss
+++ b/app/scss/components/carousel.scss
@@ -17,6 +17,7 @@
     }
 
     @include breakpoint-up("large") {
+      margin-left: 2rem;
       margin-top: 3rem;
     }
 
@@ -32,9 +33,18 @@
       height: 65vh;
       max-height: 510px;
       margin-left: 1.5rem;
+      cursor: pointer;
+
+      @include breakpoint-up("large") {
+        margin-left: 2rem;
+      }
 
       &:last-of-type {
         margin-right: 1.5rem;
+
+        @include breakpoint-up("large") {
+          margin-right: 2rem;
+        }
       }
 
       .product-wrapper {
