--- a/app/scss/globals/config.scss
+++ b/app/scss/globals/config.scss
@@ -36,6 +36,7 @@ body {
       font-size: 16px;
     }
     @include breakpoint-up("large") {
+      margin: 0 5rem;
       font-size: 28px;
     }
   }
@@ -49,6 +50,7 @@ body {
       font-size: 40px;
     }
     @include breakpoint-up("large") {
+      margin: 0 5rem;
       font-size: 60px;
     }
   }
